fix gap

--- a/godgamer/css/style.css
+++ b/godgamer/css/style.css
@@ -7,7 +7,7 @@ body {
 
 .slider {
   position: relative;
-  height: 200px;
+  height: 210px;
 }
 
 .slide {
